# vais-widget-app

./: Dockerfile  Makefile  config.py  main.py  pyproject.toml
templates/: index.html
