[tool.poetry]
name = "vais-widget-app"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
